--- a/MODAMSWeb/Areas/Admin/Views/Categories/EditCategory.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/EditCategory.cshtml
@@ -1,15 +1,19 @@
-﻿@model MODAMS.Models.Category
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
+@model MODAMS.Models.Category
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
-        <h1 class="page-title">Edit Category</h1>
+        <h1 class="page-title">@Localizer["EditCategory"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Categories" asp-action="Index">Categories</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Edit Category</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Categories" asp-action="Index">@Localizer["Categories"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["EditCategory"]</li>
         </ol>
     </div>
 </div>
@@ -19,7 +23,7 @@
     <div class="col-lg-12 col-md-12">
         <div class="card">
             <div class="card-header border-bottom">
-                <h4 class="mb-0">Category Details</h4>
+                <h4 class="mb-0">@Localizer["CategoryDetails"]</h4>
             </div>
             <div class="card-body p-0">
                 <div class="row p-5 border-bottom">
@@ -33,7 +37,7 @@
                                     <div class="col-sm-6">
                                         <div class="mb-3 form-group">
                                             <label asp-for="CategoryCode"></label>
-                                            <input asp-for="CategoryCode" class="form-control" aria-required="true" placeholder="Category Code" />
+                                            <input asp-for="CategoryCode" class="form-control" readonly aria-required="true" />
                                             <span asp-validation-for="CategoryCode" class="text-danger"></span>
                                         </div>
                                     </div>
@@ -42,8 +46,17 @@
                                     <div class="col-sm-6">
                                         <div class="mb-3 form-group">
                                             <label asp-for="CategoryName"></label>
-                                            <input asp-for="CategoryName" class="form-control" aria-required="true" placeholder="Category Name" />
+                                            <input asp-for="CategoryName" class="form-control" aria-required="true" />
                                             <span asp-validation-for="CategoryName" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="mb-3 form-group">
+                                            <label asp-for="CategoryNameSo"></label>
+                                            <input asp-for="CategoryNameSo" class="form-control" aria-required="true" />
+                                            <span asp-validation-for="CategoryNameSo" class="text-danger"></span>
                                         </div>
                                     </div>
                                 </div>
@@ -53,8 +66,8 @@
                 </div>
                 <div class="row p-5">
                     <div class="btn-list">
-                        <button id="btnSubmit" class="btn btn-primary"><i class="fe fe-check-circle"></i> Save Changes</button>
-                        <a asp-area="Admin" asp-controller="Categories" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                        <button id="btnSubmit" class="btn btn-info"><i class="fa fa-check-circle"></i> @Localizer["SaveChanges"]</button>
+                        <a asp-area="Admin" asp-controller="Categories" asp-action="Index" class="btn btn-gray"><i class="fa fa-close"></i>&nbsp;@Localizer["Cancel"]</a>
                     </div>
                 </div>
             </div>
@@ -68,8 +81,6 @@
             $("#btnSubmit").on("click", () => {
                 $("#frmCategory").submit();
             });
-
-
         });
     </script>
 }
